test/error/semantic/unknown_data_type.kat
func main(argc: int, argv: str) => int {
  let x: whoami = 1;
}
